--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.alert{
+  transition: background-color .5s, color .5s ;
+}
+.alert:hover{
+  background-color: #333;
+  color: white;
+  cursor: pointer;
+}
+
+.listt{
+  list-style: none;
+}
+.listt li{
+  margin: .5rem;
+}
